# data-pipeline-test

./: .env  .gitignore  Makefile  README.md  check.py  config.py  db.py  docker-compose.yml  extract.py  load.py  pyproject.toml  run_pipeline.py  schema.sql  transform.py  workspace.ipynb
API/: API.py
data/: test_data.csv
pipeline/: check.py  check_views.py  create_views.py  db.py  enhanced_views.py  extract.py  load.py  reference_data.py  transform.py
