[project]
name = "data-pipeline-test"
version = "0.1.0"
description = "A simple Python ETL pipeline project for data engineering interview testing."
authors = [{name = "Handshaik"}]
dependencies = [
    "pandas",
    "sqlalchemy",
    "psycopg2-binary",
    "python-dotenv",
    "jupyter>=1.1.1",
]
requires-python = ">=3.9"
