[project]
name = "data-pipeline-test"
version = "0.1.0"
description = "A simple Python ETL pipeline project for data engineering interview testing."
authors = [{name = "Handshaik"}]
dependencies = [
    "pandas",
    "sqlalchemy",
    "psycopg2-binary",
    "python-dotenv",
    "jupyter>=1.1.1",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "python-multipart>=0.0.20",
]
requires-python = ">=3.9"
